<!--
  ~ Created by wingjay on 11/16/16 3:31 PM
  ~ Copyright (c) 2016.  All rights reserved.
  ~
  ~ Last modified 11/10/16 11:05 AM
  ~
  ~ Reach me: https://github.com/wingjay
  ~ Email: yinjiesh@126.com
  -->

<resources>
    <string name="app_name">简诗</string>
    <string name="app_name_broken">简\n诗</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_date_choose">DateChooseActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_diary_list">DiaryListActivity</string>
    <string name="title_activity_diary_view">DiaryViewActivity</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="logo_name">简诗</string>
    <string name="logo_slogan">回归文字的本质，回归美好</string>
    <string name="write">撰</string>
    <string name="read">阅</string>
    <string name="setting">置</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="edit_title_hint">标题</string>
    <string name="edit_content_hint">讲述你的故事&#8230;</string>
    <string name="edit">辑</string>
    <string name="edit_save">存</string>
    <string name="share">享</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="edit_saving">保存中&#8230;</string>
    <string name="save_success">保存成功!</string>
    <string name="save_failure">保存失败&#8230;</string>
    <string name="want_to_save">是否要保存？</string>
    <string name="edit_content_not_null">抱歉，内容不能为空</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="do_you_want_to_delete_diary">确定要删除？</string>
    <string name="delete_diary_failure">删除失败，请重试</string>
    <string name="space_of_date_record">\n\n\n\n</string>
    <string name="space_of_date_record_end">\n\n</string>
    <string name="record">记</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="user_setting">设置</string>
    <string name="vertical_reading">竖排文字阅读</string>
    <string name="turn_on_home_image_poem">开启首页图片背景</string>
    <string name="customize_background_color">更换背景颜色</string>
    <string name="support_info">支持信息</string>
    <string name="account_info">账户</string>
    <string name="user_feedback">反馈</string>
    <string name="version_upgrade">版本升级</string>
    <string name="logout">注销</string>
    <string name="feedback_email_subject">关于&lt;简诗&gt;的二三意见</string>
    <string name="feedback_email_prefix">Hi,亲爱的简诗开发者们!\n&#160;&#160;&#160;&#160;我希望向亲们提出如下意见：</string>
    <string name="send_email">发送邮件</string>
    <string name="email_client_no_found">未找到任何邮箱客户端，请安装</string>
    <string name="please_choose_day">请选择日期</string>
    <string name="please_choose_month">请选择月份</string>
    <string name="illegal_choose_date">你所选择的日期不合法</string>
    <string name="current_version_code">当前：</string>

    <!--upgrade-->
    <string name="upgrade_title">小小的升级只为追求更好</string>
    <string name="checking_upgrade">升级检查中...</string>
    <string name="upgrade_info">新版本：%1$s； 更新信息：%2$s</string>
    <string name="upgrade">获取新体验</string>
    <string name="next_time">下次咯</string>
    <string name="current_newest_verion">您已经是最新版本啦！</string>
    <string name="go_to_setting_for_upgrading">记得去设置页面点击更新哦！</string>
    <!--upgrade end-->

    <string-array name="edit_content_hint_array">
        <item>美好的一天，给自己写句鼓励吧&#8230;</item>
        <item>给精彩的一天作个计划吧&#8230;</item>
        <item>宁静的午后，文字相伴&#8230;</item>
        <item>午后，来杯咖啡，写写文字&#8230;</item>
        <item>落日余晖，是否感慨&#8230;</item>
        <item>深夜了，心事诉于此&#8230;</item>
        <item>亲爱的，明天见&#8230;</item>
        <item>@string/edit_content_hint</item>
    </string-array>
    <string-array name="edit_title_hint_array">
        <item>清晨</item>
        <item>上午</item>
        <item>午间</item>
        <item>午后</item>
        <item>落日</item>
        <item>夜深</item>
        <item>晚安</item>
        <item>@string/edit_title_hint</item>
    </string-array>

    <!--three-line poems, use ',' to split into a three-line poem -->
    <string name="three_line_poem_default">
        春色三分-二分尘土-一分流水
    </string>
    <string-array name="three_line_poem_array">
        <item>
            日出江花红胜火-春来江水绿如蓝-能不忆江南
        </item>
        <item>
            白纸。黑字-一堆-醒着的历史
        </item>
        <item>
            春色三分-二分尘土-一分流水
        </item>
        <item>
            满眼游丝兼落絮-红杏开时-一霎清明雨
        </item>
        <item>
            单身这场旅行-走得太远-忘了归路
        </item>
        <item>
            流浪的-鸟-何处是归巢
        </item>
        <item>
            转朱阁-低绮户-照无眠
        </item>
        <item>
            @string/three_line_poem_default
        </item>
    </string-array>
    <string name="three_line_string_split">-</string>

    <string-array name="three_line_poem_array_2">
        泥泥泞泞的小路-淅淅沥沥的雨声-山村的灯火依然通红
        墙里秋千墙外道。墙外行人，墙里佳人笑。
        云雾簇拥,高高在上-令平原仰首翘望-一只雄鹰正展翅高飞
    </string-array>

    <string name="please_choose_bg_color">选择你偏爱的背景颜色</string>
    <string name="unknown_color">未知颜色</string>

    <!--account-->
    <string name="login">登录</string>
    <string name="logining">登录中</string>
    <string name="signup">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="signuping">注册中</string>
    <string name="login_failure">用户名密码不匹配</string>
    <string name="signup_failure">注册失败</string>
    <string name="email_should_not_be_null">邮箱不能为空</string>
    <string name="password_should_not_be_null">密码不能为空</string>
    <string name="password_length_must_bigger_than_6">密码长度至少六位</string>
    <string name="wrong_email_format">邮箱格式不对</string>
    <string name="logout_ing">注销中</string>
    <string name="logout_warning_with_data_not_sync">确定要注销？你还有数据未同步，现在登出可能导致数据丢失。</string>
    <string name="invalid_token_force_logout">你的身份信息已经过期，被强制登出</string>
    <string name="please_enter_your_email">请输入你的邮箱</string>
    <string name="send_email_for_updating_password">发送更新密码邮件</string>
    <string name="cancel">取消</string>
    <string name="success_send_password_changing_email">邮件发送成功，请前往邮箱更改密码</string>
    <!--account ends-->

    <!--logo-->
    <string name="jianshi_slogan_1">@string/logo_slogan</string>
    <string-array name="jianshi_slogan">
        <item>@string/logo_slogan</item>
        <item>流浪的鸟，何处是归巢</item>
    </string-array>

    <string name="jianshi_slogan_2">@string/logo_slogan</string>
    <!--logo ends-->

    <!--network error-->
    <string name="network_error">你的网络连接不正常，请检查</string>
    <string name="server_request_error">请求出错，请检查输入信息，或者过会再试</string>
    <!--network error end-->

    <!--share-->
    <string name="share_failure">分享失败</string>
    <!--share error-->

    <!--pay developer-->
    <string name="copy_wechat_account">拷贝开发者微信账号</string>
    <string name="copy_alipay_account">拷贝开发者支付宝账号</string>
    <string name="refuse_pay">残忍拒绝</string>
    <string name="pay_developer">打赏</string>
    <string name="pay_developer_desc">赏开发者一杯咖啡呗</string>
    <string name="copy_successfully">拷贝成功</string>
    <string name="guest">不想注册？</string>
    <string name="debug_skip">跳过（如未搭建后台）</string>
    <string name="register_title">真的不想注册吗？</string>
    <string name="register_message">不注册使用，数据仅能存在本机上，我们将无法为您同步数据，在您卸载重装或者更换设备的时候，您的记录将不会保留！！！</string>
    <string name="no_register">不注册</string>
    <string name="register">还是注册吧</string>

</resources>
