<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/qian_bai">

    <FrameLayout
        android:id="@+id/left_circle"
        android:layout_width="137dp"
        android:layout_height="307dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="-67dp"
        android:background="@drawable/jianshi_logo"/>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/left_circle"
        android:layout_toRightOf="@+id/left_circle"
        android:paddingEnd="@dimen/margin_32"
        android:paddingRight="@dimen/margin_32"
        android:paddingTop="@dimen/margin_64"
        >

        <com.wingjay.jianshi.ui.widget.font.CustomizeTextView
            android:id="@+id/app_name"
            style="@style/SignupTextView"
            android:text="@string/app_name_broken"
            android:textColor="@color/black"
            android:textSize="36sp"
            />

        <com.wingjay.jianshi.ui.widget.font.CustomizeTextView
            android:id="@+id/app_slogan"
            style="@style/SignupTextView"
            android:layout_below="@+id/app_name"
            android:gravity="end"
            android:text="@string/logo_slogan"
            android:textSize="14sp"
            />

        <com.wingjay.jianshi.ui.widget.font.CustomizeEditText
            android:id="@+id/email"
            style="@style/SignupEditText"
            android:layout_below="@+id/app_slogan"
            android:layout_marginTop="@dimen/margin_64"
            android:hint="@string/email"
            />

        <com.wingjay.jianshi.ui.widget.font.CustomizeEditText
            android:id="@+id/password"
            style="@style/SignupEditText"
            android:layout_below="@+id/email"
            android:gravity="end"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

        <com.wingjay.jianshi.ui.widget.font.CustomizeTextView
            android:id="@+id/login"
            style="@style/SignupTextView"
            android:layout_below="@+id/password"
            android:text="@string/login"
            android:textColor="@color/bright_red"
            />

        <com.wingjay.jianshi.ui.widget.font.CustomizeTextView
            android:id="@+id/signup"
            style="@style/SignupTextView"
            android:layout_below="@+id/login"
            android:text="@string/signup"
            />

        <com.wingjay.jianshi.ui.widget.font.CustomizeTextView
            android:id="@+id/skip"
            style="@style/SignupTextView"
            android:layout_below="@+id/signup"
            android:text="skip"
            android:visibility="gone"
            />

    </RelativeLayout>

</RelativeLayout>