<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/layout_container"
              style="@style/NormalBg"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.wingjay.jianshi.ui.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.wingjay.jianshi.ui.widget.font.CustomizeTextView
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/user_setting"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_border"
                android:padding="16dp">

                <com.wingjay.jianshi.ui.widget.font.CustomizeTextView
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/vertical_reading"
                    />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/vertical_write"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_border"
                android:padding="16dp">

                <com.wingjay.jianshi.ui.widget.font.CustomizeTextView
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/turn_on_home_image_poem"
                    />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/home_image_poem_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    />

            </FrameLayout>

            <com.wingjay.jianshi.ui.widget.font.CustomizeTextView
                android:id="@+id/customize_bg_color"
                style="@style/ClickableTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/white_border"
                android:padding="@dimen/margin_16"
                android:text="@string/customize_background_color"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_18"
        android:orientation="vertical"
        >

        <com.wingjay.jianshi.ui.widget.font.CustomizeTextView
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/support_info"
            />


        <com.wingjay.jianshi.ui.widget.font.CustomizeTextView
            android:id="@+id/send_feedback"
            style="@style/ClickableTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/white_border"
            android:padding="16dp"
            android:text="@string/user_feedback"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_18"
        android:orientation="vertical">

        <com.wingjay.jianshi.ui.widget.font.CustomizeTextView
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/account_info"
            />

        <com.wingjay.jianshi.ui.widget.font.CustomizeTextView
            android:id="@+id/logout"
            style="@style/ClickableTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/white_border"
            android:padding="16dp"
            android:text="@string/logout"/>

    </LinearLayout>

</LinearLayout>
