<!--
  ~ Created by wingjay on 11/16/16 3:31 PM
  ~ Copyright (c) 2016.  All rights reserved.
  ~
  ~ Last modified 11/10/16 11:05 AM
  ~
  ~ Reach me: https://github.com/wingjay
  ~ Email: yinjiesh@126.com
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             style="@style/NormalBg"
             android:id="@+id/layout_container"
             tools:context="com.wingjay.jianshi.ui.SplashActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:text="@string/logo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextStyle"
            android:gravity="center"
            android:textSize="@dimen/huge_text_size"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextStyle"
            android:text="@string/logo_slogan"
            android:gravity="center"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginTop="@dimen/margin_18"
            android:layout_marginBottom="@dimen/margin_18"
            />

        <com.wingjay.jianshi.ui.widget.TextPointView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:text="@string/write"
            />

    </LinearLayout>

</FrameLayout>
